tests/ui/privacy/private-method-cross-crate.stderr
error[E0624]: associated function `nap` is private
  --> $DIR/private-method-cross-crate.rs:7:8
   |
LL |   nyan.nap();
   |        ^^^ private associated function
   |
  ::: $DIR/auxiliary/cci_class_5.rs:8:9
   |
LL |         fn nap(&self) {}
   |         ------------- private associated function defined here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0624`.
